added ol and ul

--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    asdfghjkl
-    <br> dfghdfgh
+    <h1>Reyaans website</h1>
+    <h2> My favorite games</h2>
+  <ol>
+     <li>hollow knight</li>
+    <li>void/breaker</li>
+    <li>sekiro shadows die twice</li>
+
+  </ol>
+<h3>  My hobbies</h3>      
+<ul>        
+<li>Fencing</li>
+<li>Archery</li>
+<li>Grilling</li>
+</ul>
+
 </body>
 </html>
