Added hyperlink to google and text under OL and UL using LI

--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
-    <h1>Reyaans website</h1>
-    <h2> My favorite games</h2>
+  <h1>Reyaans website</h1>
+
+  <h2> My favorite games</h2>
   <ol>
-     <li>hollow knight</li>
+    <li>hollow knight</li>
     <li>void/breaker</li>
     <li>sekiro shadows die twice</li>
-
   </ol>
-<h3>  My hobbies</h3>      
-<ul>        
-<li>Fencing</li>
-<li>Archery</li>
-<li>Grilling</li>
-</ul>
+
+  <h2> My hobbies</h2>
+  <ul>
+    <li>Fencing</li>
+    <li>Archery</li>
+    <li>Grilling</li>
+  </ul>
+
+  <a href="https://www.google.com">Google</a>
 
 </body>
+
 </html>
