--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
   <a href="https://www.google.com">Google</a>
 
+<br>  
+<img src="images/images-300x300.jpg" alt="The big red bird from angry birds"
+width="500" height="500">
+
 </body>
 
-</html>
+</html> 
