Added P, EM, and STRONG code to enhance text

--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 <body>
   <h1>Reyaans website</h1>
 
+
   <h2> My favorite games</h2>
+  <p>I enjoy games that are <em>challenging</em> and require real <strong>skill</strong> to beat</p>
   <ol>
     <li>hollow knight</li>
     <li>void/breaker</li>
     <li>sekiro shadows die twice</li>
   </ol>
 
+
   <h2> My hobbies</h2>
+  <p>I like fast paced and <strong>intensive</strong> sports that need <em>focus</em></p>
   <ul>
     <li>Fencing</li>
     <li>Archery</li>
-    <li>Grilling</li>
+    <li>Badminton</li>
   </ul>
 
   <a href="https://www.google.com">Google</a>
