Cleaned up code and improved organization

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 <body>
   <h1>Reyaans website</h1>
 
-
+<section><!--Games-->
   <h2> My favorite games</h2>
   <p>I enjoy games that are <em>challenging</em> and require real <strong>skill</strong> to beat</p>
   <ol>
-    <li>hollow knight</li>
-    <li>void/breaker</li>
-    <li>sekiro shadows die twice</li>
+    <li>Hollow Knight</li>
+    <li>Void/Breaker</li>
+    <li>Sekiro Shadows Die Twice</li>
   </ol>
+</section>
 
-
+<section><!--Hobbies-->
   <h2> My hobbies</h2>
   <p>I like fast paced and <strong>intensive</strong> sports that need <em>focus</em></p>
   <ul>
@@ -27,13 +28,18 @@
     <li>Archery</li>
     <li>Badminton</li>
   </ul>
+</section>
 
-  <a href="https://www.google.com">Google</a>
+<section> <!--Links-->
+  <h2>Useful Links</h2>
+<a href="https://www.google.com">Google</a> 
+</section>
 
-<br>  
+ <section> <!--Images-->
 <img src="images/images-300x300.jpg" alt="The big red bird from angry birds"
 width="500" height="500">
+</section>
+
 
 </body>
-
 </html> 
