--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+  <style>
+    body {background-color: black;}
+  </style>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Reyaan's Personal Website</title>
 </head>
-
 <body>
-  <h1>Reyaans website</h1>
+
+
+  <h1>Reyaan's website</h1>
 
 <section><!--Games-->
   <h2> My favorite games</h2>
-  <p>I enjoy games that are <em>challenging</em> and require real <strong>skill</strong> to beat</p>
+  <p>I enjoy games that are <em>challenging</em> and require real <strong>skill</strong> to beat.</p>
   <ol>
     <li>Hollow Knight</li>
     <li>Void/Breaker</li>
@@ -22,7 +26,7 @@
 
 <section><!--Hobbies-->
   <h2> My hobbies</h2>
-  <p>I like fast paced and <strong>intensive</strong> sports that need <em>focus</em></p>
+  <p>I like fast paced and <strong>intensive</strong> sports that need <em>focus.</em></p>
   <ul>
     <li>Fencing</li>
     <li>Archery</li>
@@ -36,7 +40,8 @@
 </section>
 
  <section> <!--Images-->
-<img src="images/images-300x300.jpg" alt="The big red bird from angry birds"
+<img src="images/images-300x300.jpg" 
+alt="The big red bird from angry birds"
 width="500" height="500">
 </section>
 
