Changed text color to white

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <style>
-    body {background-color: black;}
+    body {
+      background-color: black;
+      color: white;
+    }
   </style>
 
   <meta charset="UTF-8">
