Added audio from beepbox and renamed sounds folder to audio

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@ alt="The big red bird from angry birds"
 width="500" height="500">
 </section>
 
+<section> <!--Audio-->
+<audio controls src="audio/beepbox.wav"></audio>
+</section>
+
 
 </body>
 </html> 
