Defined sections with ID

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     body {
       background-color: black;
       color: white;
+      font-family: Arial, sans-serif;
     }
   </style>
 
@@ -17,7 +18,7 @@
 
   <h1>Reyaan's website</h1>
 
-<section><!--Games-->
+<section id="games">
   <h2> My favorite games</h2>
   <p>I enjoy games that are <em>challenging</em> and require real <strong>skill</strong> to beat.</p>
   <ol>
@@ -27,7 +28,7 @@
   </ol>
 </section>
 
-<section><!--Hobbies-->
+<section id="hobbies">
   <h2> My hobbies</h2>
   <p>I like fast paced and <strong>intensive</strong> sports that need <em>focus.</em></p>
   <ul>
@@ -37,18 +38,18 @@
   </ul>
 </section>
 
-<section> <!--Links-->
+<section id="links"> 
   <h2>Useful Links</h2>
 <a href="https://www.google.com">Google</a> 
 </section>
 
- <section> <!--Images-->
+ <section id=images>
 <img src="images/images-300x300.jpg" 
 alt="The big red bird from angry birds"
 width="500" height="500">
 </section>
 
-<section> <!--Audio-->
+<section id="audio"> 
 <audio controls src="audio/beepbox.wav"></audio>
 </section>
 
