Changed font to Arial

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a href="https://www.google.com">Google</a> 
 </section>
 
- <section id=images>
+ <section id="images">
 <img src="images/images-300x300.jpg" 
 alt="The big red bird from angry birds"
 width="500" height="500">
