Turned favorite games into clickable drop downs that display a short description

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reyaan's Personal Website</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,10 +18,27 @@
   <h2> My favorite games</h2>
   <p>I enjoy games that are <em>challenging</em> and require real <strong>skill</strong> to beat.</p>
   <ol>
-    <li>Hollow Knight</li>
-    <li>Void/Breaker</li>
-    <li>Sekiro Shadows Die Twice</li>
-  </ol>
+    <li>
+    <details>
+      <summary>Hollow Knight</summary>
+      <p> Difficult metroidvania where you explore, fight tough enemies, and scour for runes</p>
+    </details>
+  </li>
+
+  <li>
+    <details>
+      <summary>Void/Breaker</summary>
+      <p>An intense fast-paced action action FPS game with flashy combat and stylish mechanics</p>
+    </details>
+  </li>
+  
+  <li>
+    <details>
+      <summary>Sekiro Shadows Die Twice</summary>
+      <p> Ultra fast souls game that focuses on timing, precision, and punishing combat</p>
+    </details>
+  </li>
+</ol>
 </section>
 
 <section id="hobbies">
