Changed all h2 elements and links to be italics.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h1>Reyaan's website</h1>
 
 <section id="games">
-  <h2> My favorite games</h2>
+  <h2> <em>My favorite games</em></h2>
   <p>I enjoy games that are <em>challenging</em> and require real <strong>skill</strong> to beat.</p>
   <ol>
     <li>
@@ -42,7 +42,7 @@
 </section>
 
 <section id="hobbies">
-  <h2> My hobbies</h2>
+  <h2> <em>My hobbies</em></h2>
   <p>I like fast paced and <strong>intensive</strong> sports that need <em>focus.</em></p>
   <ul>
     <li>Fencing</li>
