Added underline to h2 (games), and underoverline to h1.

--- a/index.html
+++ b/index.html
@@ -1,71 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reyaan's Personal Website</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 
-  <h1>Reyaan's website</h1>
+  <h1 class="underover">Reyaan's website</h1>
 
-<section id="games">
-  <h2> <em>My favorite games</em></h2>
-  <p>I enjoy games that are <em>challenging</em> and require real <strong>skill</strong> to beat.</p>
-  <ol>
-    <li>
-    <details>
-      <summary>Hollow Knight</summary>
-      <p> Difficult metroidvania where you explore, fight tough enemies, and scour for runes</p>
-    </details>
-  </li>
+  <section id="games">
+    <h2 class="under"> <em>My favorite games</em></h2>
+    <p>I enjoy games that are <em>challenging</em> and require real <strong>skill</strong> to beat.</p>
+    <ol>
+      <li>
+        <details>
+          <summary>Hollow Knight</summary>
+          <p> Difficult metroidvania where you explore, fight tough enemies, and scour for runes</p>
+        </details>
+      </li>
 
-  <li>
-    <details>
-      <summary>Void/Breaker</summary>
-      <p>An intense fast-paced action action FPS game with flashy combat and stylish mechanics</p>
-    </details>
-  </li>
-  
-  <li>
-    <details>
-      <summary>Sekiro Shadows Die Twice</summary>
-      <p> Ultra fast souls game that focuses on timing, precision, and punishing combat</p>
-    </details>
-  </li>
-</ol>
-</section>
+      <li>
+        <details>
+          <summary>Void/Breaker</summary>
+          <p>An intense fast-paced action action FPS game with flashy combat and stylish mechanics</p>
+        </details>
+      </li>
 
-<section id="hobbies">
-  <h2> <em>My hobbies</em></h2>
-  <p>I like fast paced and <strong>intensive</strong> sports that need <em>focus.</em></p>
-  <ul>
-    <li>Fencing</li>
-    <li>Archery</li>
-    <li>Badminton</li>
-  </ul>
-</section>
+      <li>
+        <details>
+          <summary>Sekiro Shadows Die Twice</summary>
+          <p> Ultra fast souls game that focuses on timing, precision, and punishing combat</p>
+        </details>
+      </li>
+    </ol>
+  </section>
 
-<section id="links"> 
-  <h2>Useful Links</h2>
-<a href="https://www.google.com">Google</a> 
-</section>
+  <section id="hobbies">
+    <h2> <em>My hobbies</em></h2>
+    <p>I like fast paced and <strong>intensive</strong> sports that need <em>focus.</em></p>
+    <ul>
+      <li>Fencing</li>
+      <li>Archery</li>
+      <li>Badminton</li>
+    </ul>
+  </section>
 
- <section id="images">
-<img src="images/images-300x300.jpg" 
-alt="The big red bird from angry birds"
-width="500" height="500">
-</section>
+  <section id="links">
+    <h2>Useful Links</h2>
+    <a href="https://www.google.com">Google</a>
+  </section>
 
-<section id="audio"> 
-<audio controls src="audio/beepbox.wav"></audio>
-</section>
+  <section id="images">
+    <img src="images/images-300x300.jpg" alt="The big red bird from angry birds" width="500" height="500">
+  </section>
+
+  <section id="audio">
+    <audio controls src="audio/beepbox.wav"></audio>
+  </section>
 
 
 </body>
-</html> 
+
+</html>
