Moved hobbies and games to seperate web page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <h1 class="underover">Reyaan's website</h1>
   <a href="class_links.html">class links</a>
+  <a href="hobbies.html"> Hobbies</a>
   <section id="games">
     <h2 class="under"> <em>My favorite games</em></h2>
     <p>I enjoy games that are <em>challenging</em> and require real <strong>skill</strong> to beat.</p>
@@ -46,7 +47,7 @@
   </section>
 
   <section id="hobbies">
-    <h2> <em>My hobbies</em></h2>
+    <h2>My hobbies</h2>
     <p>I like fast paced and <strong>intensive</strong> sports that need <em>focus.</em></p>
     <ul>
       <li>Fencing</li>
