--- a/hobbies.html
+++ b/hobbies.html
@@ -9,7 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-hobbies-games.css">
 </head>
 <body>
     <h1> Hobbies and games</h1>
