changed color of links to red

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
 
   <h1 class="underover">Reyaan's website</h1>
-  <a href="class_links.html">class links</a>
-  <a href="hobbies.html"> Hobbies</a>
+  <a href="class_links.html" style="color:#FF0000;"> class links</a>
+  <a href="hobbies.html" style="color:#FF0000;"> Hobbies</a>
   
 
   <section id="links">
     <h2>Useful Links</h2>
-    <a href="https://www.google.com">Google</a>
+    <a href="https://www.google.com" style="color:#FF0000"> Google</a>
   </section>
 
   <section id="images">
