added links to wikipedia and added <nav> elements

--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
 
 
   <h1 class="underover">Reyaan's website</h1>
-  <a href="class_links.html" style="color:firebrick;"> class links</a>
-  <a href="hobbies.html" style="color:firebrick;"> Hobbies</a>
-  
+  <nav>
+    <a href="class_links.html" style="color:firebrick;"> class links</a>
+    <a href="hobbies.html" style="color:firebrick;"> Hobbies</a>
+ </nav>
 
   <section id="links">
     <h2>Useful Links</h2>
+    <nav>
+      <a href="https://www.wikipedia.org" style="color:firebrick"> Wikipedia</a>
     <a href="https://www.google.com" style="color:firebrick"> Google</a>
+    </nav>
   </section>
 
   <section id="images">
