Increased contrast of link colors

--- a/hobbies.html
+++ b/hobbies.html
@@ -50,6 +50,6 @@
       </li>
     </ol>
   </section>
-    <a href="index.html" style="color:firebrick;"> Return To Main page</a>
+    <a href="index.html" style="color:#FF0000;"> Return To Main page</a>
 </body>
 </html>
