--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 
   <h1 class="underover">Reyaan's website</h1>
   <nav>
-    <a href="class_links.html" style="color:firebrick;"> class links</a>
-    <a href="hobbies.html" style="color:firebrick;"> Hobbies</a>
+    <a href="class_links.html" style="color:#FF0000;"> class links</a>
+    <a href="hobbies.html" style="color:#FF0000;"> Hobbies</a>
  </nav>
 
   <section id="links">
     <h2>Useful Links</h2>
     <nav>
-      <a href="https://www.wikipedia.org" style="color:firebrick"> Wikipedia</a>
+      <a href="https://www.wikipedia.org" style="color:#FF0000;"> Wikipedia</a>
       <br>
-      <a href="https://www.google.com" style="color:firebrick"> Google</a>
+      <a href="https://www.google.com" style="color:#FF0000;"> Google</a>
     </nav>
   </section>
 
