Added buttons that open a new webpage using javascript

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
   <h1 class="underover">Reyaan's website</h1>
   <nav>
-    <a href="class_links.html" style="color:#FF0000;"> class links</a>
-    <a href="hobbies.html" style="color:#FF0000;"> Hobbies</a>
- </nav>
+    <button id="classlinks">class Links</button>
+    <button id="hobbies">Hobbies</button>
+
+  </nav>
 
   <section id="links">
     <h2>Useful Links</h2>
@@ -39,7 +40,7 @@
     <audio controls src="audio/beepbox.wav"></audio>
   </section>
 
-
+  <script src="index.js"></script>
 </body>
 
 </html>
