Linked mainpage to class_links

--- a/class_links.html
+++ b/class_links.html
@@ -10,12 +10,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
     <h1> Contains links to other pages</h1>
-    <a href="index.html"> main page </a>
+    <button id="main">Back To Homepage</button>
     <ul>
         <li>https://GUEST666THEREAL87.github.io</li>
         <li></li>
@@ -23,6 +23,7 @@
         <li></li>
         <li></li>
     </ul>
+    <script src="Javascript-linking/class_links.js"></script>
 </body>
 
 </html>
