--- a/hobbies.html
+++ b/hobbies.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hobbies and Games</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="style-hobbies-games.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hobbies and Games</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="CSS/style-hobbies-games.css">
 </head>
+
 <body>
-    <h1> Hobbies and games</h1>
-<br>
+  <h1> Hobbies and games</h1>
+  <br>
   <section id="hobbies">
     <h2>My Hobbies</h2>
     <p>I like fast paced and <strong>intensive</strong> sports that need <em>focus.</em></p>
@@ -23,17 +25,17 @@
       <li>Badminton</li>
     </ul>
   </section>
-<br>
-    <section id="games">
-        <h2> Favorite Games</h2>
-        <p>I enjoy games that are<em>challenging </em>and require real<strong>skill</strong> to beat.</p>
-        <ol>
-            <li>
-                <details>
-                    <summary>Hollow Knight</summary>
-                    <p> Difficult metroidvania where you explore, fight tough enemies, and scour for runes</p>
-                </details>
-            </li>
+  <br>
+  <section id="games">
+    <h2> Favorite Games</h2>
+    <p>I enjoy games that are<em>challenging </em>and require real<strong>skill</strong> to beat.</p>
+    <ol>
+      <li>
+        <details>
+          <summary>Hollow Knight</summary>
+          <p> Difficult metroidvania where you explore, fight tough enemies, and scour for runes</p>
+        </details>
+      </li>
 
       <li>
         <details>
@@ -50,6 +52,7 @@
       </li>
     </ol>
   </section>
-    <a href="index.html" style="color:#FF0000;"> Return To Main page</a>
+  <a href="index.html" style="color:#FF0000;"> Return To Main page</a>
 </body>
+
 </html>
