--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
@@ -40,7 +40,7 @@
     <audio controls src="audio/beepbox.wav"></audio>
   </section>
 
-  <script src="index.js"></script>
+  <script src="Javascript-linking/index.js"></script>
 </body>
 
 </html>
