Linked mainpage to hobbies

--- a/hobbies.html
+++ b/hobbies.html
@@ -52,7 +52,8 @@
       </li>
     </ol>
   </section>
-  <a href="index.html" style="color:#FF0000;"> Return To Main page</a>
+  <button id="main">Return To Homepage</button>
+  <script src="Javascript-linking/hobbies.js"></script>
 </body>
 
 </html>
