Styled all buttons using CSS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/buttons.css">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
 
   <h1 class="underover">Reyaan's website</h1>
   <nav>
-    <button id="classlinks">class Links</button>
+    <button id="classlinks">Class Links</button>
     <button id="hobbies">Hobbies</button>
 
   </nav>
