Fixed errors and improved visual styling of buttons

--- a/class_links.html
+++ b/class_links.html
@@ -10,8 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/buttons.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/buttons.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         <li></li>
         <li></li>
     </ul>
-    <script src="../Javascript-linking/class_links.js"></script>
+    <script src="Javascript-linking/class_links.js"></script>
 </body>
 
 </html>
