--- a/hobbies.html
+++ b/hobbies.html
@@ -10,8 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="../CSS/style-hobbies-games.css">
-  <link rel="stylesheet" href="../CSS/buttons.css">
+  <link rel="stylesheet" href="CSS/style-hobbies-games.css">
+  <link rel="stylesheet" href="CSS/buttons.css">
 </head>
 
 <body>
@@ -53,9 +53,8 @@
       </li>
     </ol>
   </section>
-  <br>
   <button id="main">Return To Homepage</button>
-  <script src="../Javascript-linking/hobbies.js"></script>
+  <script src="Javascript-linking/hobbies.js"></script>
 </body>
 
 </html>
