--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="../CSS/style.css">
-  <link rel="stylesheet" href="../CSS/buttons.css">
+  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/buttons.css">
 </head>
 
 <body>
@@ -34,14 +34,14 @@
   </section>
 
   <section id="images">
-    <img src="../images/images-300x300.jpg" alt="The big red bird from angry birds" width="500" height="500">
+    <img src="images/images-300x300.jpg" alt="The big red bird from angry birds" width="500" height="500">
   </section>
 
   <section id="audio">
-    <audio controls src="../audio/beepbox.wav"></audio>
+    <audio controls src="audio/beepbox.wav"></audio>
   </section>
 
-  <script src="../Javascript-linking/index.js"></script>
+  <script src="Javascript-linking/index.js"></script>
 </body>
 
 </html>
