Major overhaul of main page - created and using seperate css file

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/style-main.css">
   <link rel="stylesheet" href="CSS/buttons.css">
 </head>
 
 <body>
 
 
-  <h1 class="underover">Reyaan's website</h1>
+  <h1 class="title">Reyaan's website</h1>
   <nav>
     <button id="classlinks">Class Links</button>
     <button id="hobbies">Hobbies</button>
