--- a/class_links.html
+++ b/class_links.html
@@ -25,6 +25,7 @@
         <li></li>
     </ul>
     <script src="Javascript-linking/class_links.js"></script>
+    <script src="secret/secret.js"></script>
 </body>
 
 </html>
