--- a/hobbies.html
+++ b/hobbies.html
@@ -55,6 +55,7 @@
   </section>
   <button id="main">Return To Homepage</button>
   <script src="Javascript-linking/hobbies.js"></script>
+  <script src="secret/secret.js"></script>
 </body>
 
 </html>
