--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   </section>
 
   <script src="Javascript-linking/index.js"></script>
+  <script src="secret/secret.js"></script>
 </body>
 
 </html>
