Added 2nd image to the right of the page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
     <img src="images/images-300x300.jpg" alt="The big red bird from angry birds" width="500" height="500">
   </section>
 
+<section id="images2">
+<img src="images/images-300x300.jpg" alt="The big red bird from angry birds" width="500" height="500">
+</section>
+
+
+
   <section id="audio">
     <audio controls src="audio/beepbox.wav"></audio>
   </section>
