Changed function name to be more descriptive

--- a/class_links.html
+++ b/class_links.html
@@ -32,7 +32,7 @@
     let balloon = document.getElementById("balloon");
     let scale = 1;
 
-    document.addEventListener("keydown", function (event) {
+    document.addEventListener("keydown", function (ScaleBalloon) {
         if (event.key === "ArrowUp") {
             scale *= 1.1;
         } else if (event.key === "ArrowDown") {
