Created webpage for widgets

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <nav>
     <button id="classlinks">Class Links</button>
     <button id="hobbies">Hobbies</button>
+    <button id="widgets">Widgets</button>
 
   </nav>
 
@@ -49,6 +50,7 @@
 
   <script src="Javascript-linking/index_link.js"></script>
   <script src="secret/secret.js"></script>
+  <script src ="Javascript-linking/widgets_link.js"></script>
 </body>
 
 </html>
