--- a/class_links.html
+++ b/class_links.html
@@ -36,7 +36,7 @@
         if (event.key === "ArrowUp") {
             scale *= 1.1;
         } else if (event.key === "ArrowDown") {
-            scale *= 0.9;
+            scale /= 0.9;
         }
         balloon.style.transform = "scale(" + scale + ")";
     });
