--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
 
   <h1 class="title">Reyaan's website</h1>
+
+  <section id="day-form">
+    <label for="dayinput">Enter Day</label>
+    <input type="text" id="dayinput" placeholder="e.g., Monday">
+    <button id="start">Submit</button>
+  </section>
+
   <nav>
     <button id="classlinks">Class Links</button>
     <button id="hobbies">Hobbies</button>
