Created widgets section and linked it to main page, added countdown widget to new page

--- a/index.html
+++ b/index.html
@@ -19,16 +19,11 @@
 
   <h1 class="title">Reyaan's website</h1>
 
-  <section id="day-form">
-    <label for="dayinput">Enter Day</label>
-    <input type="text" id="dayinput" placeholder="e.g., Monday">
-    <button id="start">Submit</button>
-  </section>
+
 
   <nav>
     <button id="classlinks">Class Links</button>
     <button id="hobbies">Hobbies</button>
-
   </nav>
 
   <section id="links">
@@ -39,6 +34,13 @@
       <a href="https://www.google.com" style="color:#FF0000;"> Google</a>
     </nav>
   </section>
+
+  <section id="widgets">
+    <h2>Widgets</h2>
+    <button id="main">Counter</button>
+  </section>
+
+
 
   <section id="images">
     <img src="images/images-300x300.jpg" alt="The big red bird from angry birds" width="500" height="500">
@@ -53,6 +55,7 @@
   <section id="audio">
     <audio controls src="audio/beepbox.wav"></audio>
   </section>
+
   <script src="Javascript-linking/index_link.js"></script>
   <script src="secret/secret.js"></script>
 </body>
