Changed website title to Countdown

--- a/counter.html
+++ b/counter.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Website</title>
+    <title>Countdown</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -21,7 +21,7 @@
     <p>Widget to count down the time until class ends</p>
     <label for="dayinput">Enter Day</label>
     <input type="text" id="dayinput" placeholder="e.g., Monday">
-    
+
     <button id="start">Submit</button>
     <label for="countdown">Time Remaining:</label>
     <input type="text" id="countdown" readonly>
