--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-  <h1 class="title">Reyaan's website</h1>
+  <h1 class="title">Personal website</h1>
 
   <nav>
     <button id="classlinks">Class Links</button>
