Linked index.html to main.html

--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
             }
         });
     </script>
+
+    <script src="Javascript-linking/index_link.js"></script>
+    
 </body>
 
 </html>
