Fixed errors with button linking

--- a/main.html
+++ b/main.html
@@ -48,6 +48,8 @@
     <img src="images/images-300x300.jpg" alt="The big red bird from angry birds" width="500" height="500">
   </section>
 
+  <script src="Javascript-linking/main_link.js"></script>
+
 
 
   <section id="audio">
